ckanext/dgu/theme/public/css/dgu.css
/* Root Elements */
/* ------------- */
body {
  background: #f4f4f4;
}
h1 { line-height: 32px; margin-bottom: 10px; }
h2 { line-height: 26px; margin-bottom: 8px; }
h3 { line-height: 21px; margin-bottom: 8px; }
h4 { line-height: 17px; margin-bottom: 8px; }
h5 { line-height: 15px; margin-bottom: 8px; }
h6 { line-height: 15px; margin-bottom: 8px; }
a       { color: #690; }
a:hover { color: #470; }
input:focus,
textarea:focus {
  border-color: #55AA00;
  border-color: rgba(80, 160, 0, 0.8);
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(50, 100, 0, 0.6);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(50, 100, 0, 0.6);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(50, 100, 0, 0.6);
}
a.btn {
  color: #fff !important;
  font-weight: normal;
}
a.btn-black-text {
  color: #000 !important;
}

/* Custom Bootstrap */
/* -----------------*/
.btn-datagov {
  background-color: #77aa00;
  background-image: -moz-linear-gradient(top, #8fc800, #669900);
  background-image: -ms-linear-gradient(top, #8fc800, #669900);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#8fc800), to(#669900));
  background-image: -webkit-linear-gradient(top, #8fc800, #669900);
  background-image: -o-linear-gradient(top, #8fc800, #669900);
  background-image: linear-gradient(top, #8fc800, #669900);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8fc800', endColorstr='#669900', GradientType=0);
  border-color: #669900 #669900 #335500;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
}
.btn-datagov:hover,
.btn-datagov:active,
.btn-datagov.active,
.btn-datagov.disabled,
.btn-datagov[disabled] {
  background-color: #669900;
}
.btn-datagov:active,
.btn-datagov.active {
  background-color: #557700 \9;
}
.btn-datagov,
.btn-datagov:hover {
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  color: #FFFFFF;
}
.btn-datagov.active {
  color: #FFFFFF;
  color: rgba(255, 255, 255, 0.75);
}

/* No-sidebar mode */
/* --------------- */
body.no-sidebar .main-outer {
  width: 940px;
}
body.no-sidebar .sidebar-outer {
  display: none;
}
body.no-minornavigation .minornavigation-outer {
  display: none;
}



/* -- Misc -- */
/* ---------- */
.preview-stamp {
  position: absolute; 
  top: -10px;
  right: -25px;
}
.inline-icon {
  padding-right: 5px;
  vertical-align: top;
}
.format-box {
  border: 1px solid #EEE;
  margin-left: 8px;
  padding: 2px 8px;
  box-shadow: 1px 1px 3px #f7f7f7;
  color: #808080;
}
.comment-left {
  width: 520px;
}
.comment-right {
  width: 520px;
  margin-left: 60px;
}
.comment-green {
  background: #cf9 !important;
}
.comment-grey {
  background: #f0f0f0 !important;
}
textarea {
  width: 80%;
}


/* BlackBar */
/* -------- */
#blackbar-underlay {
  height: 36px;
  background: #000;
}
#blackbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  background: #333;
  background: rgba(0,0,0,0.8);
  color: #fff;
  height: 36px;
}
#blackbar a {
  color: #fff;
}
#blackbar #hm-government-link {
  float: left;
  font-weight: 100;
  margin-top: 5px;
}
#blackbar #login-or-signup {
  float: right;
  margin-top: 10px;
}
#blackbar #login-or-signup a {
  font-weight: bold;
}

/* Green section */
/* ------------- */
#greenbar {
  /* Gradient */
  background: #6AB000;
  background: -moz-linear-gradient(top,  rgba(106,176,0,1) 0%, rgba(119,185,0,1) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(106,176,0,1)), color-stop(100%,rgba(119,185,0,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(106,176,0,1) 0%,rgba(119,185,0,1) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(106,176,0,1) 0%,rgba(119,185,0,1) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(106,176,0,1) 0%,rgba(119,185,0,1) 100%); /* IE10+ */
  background: linear-gradient(top,  rgba(106,176,0,1) 0%,rgba(119,185,0,1) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6ab000', endColorstr='#77b900',GradientType=0 ); /* IE6-9 */

}

/* Branding space */
/* -------------- */
#branding {
  height: 99px;
  padding-top: 40px;
  padding-left: 55px;
}


/* Nav */
/* --- */
ul#nav {
  list-style-type: none;
  margin-left: 0;
  margin-bottom: 0;
  font-size: 0; /* Delete space between inline block elements */
}
#nav li {
  padding: 0;
  width: 100px;
  position: relative;
  /* Cross-browser inline-block positioning */
  display: inline-block;
  zoom: 1;
  *display: inline;
  /* Gradient */
  background: rgb(51,51,51); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(68,68,68,1) 0%, rgba(34,34,34,1) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(68,68,68,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* IE10+ */
  background: linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
}
#nav li#nav-home {
  width: 115px;
}
#nav li#nav-linked-data {
  width: 110px;
}
#nav li#nav-about {
  width: 115px;
}
#nav li a {
  color: #ccc;
  text-align: center;
  display: block;
  padding: 10px 10px;
  border-left: 1px solid #505050;
  border-right:  1px solid #181818;
  font-size: 15px;
  font-weight: 300;
}
#nav li:first-child a {
  border-left-color: transparent;
}
#nav li:last-child a {
  border-right-color: transparent;
}
/* ... */

